--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 /* Basic styling */
 
 .jumbotron {
-  background-image: url('http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/uber/bg.png'); 
+  background-image: url('/img/IMG_0129.jpg');
   height: 100%;
   -webkit-background-size: cover;
      -moz-background-size: cover;
