--- a/style.css
+++ b/style.css
@@ -70,3 +70,18 @@ body {
 .icon-menu i {
   margin-right: 5px;
 }
+
+.gallery {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.gallery-item {
+  margin: 20px;
+}
+
+.gallery-item .thumbnail {
+  border: 5px solid #fff;
+}
