--- a/style.css
+++ b/style.css
@@ -75,6 +75,10 @@ body {
   margin-top: 20px;
   display: flex;
   flex-wrap: wrap;
+  max-width:500px;
+  max-height:500px;
+  width: auto;
+  height: auto;
   justify-content: center;
 }
 
