--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 /* Basic styling */
 
 .jumbotron {
-  background-image: url('/imgs/FullSizeRender1.png');
+  background-image: url('/imgs/FullSizeRender1.jpg');
   height: 100%;
   -webkit-background-size: cover;
      -moz-background-size: cover;
