--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   left: 0;
   margin: 0;
-  overflow: hidden;
+  overflow: auto;
   position: relative;
 }
 
@@ -71,7 +71,7 @@ body {
   margin-right: 5px;
 }
 
-.gallery {
+/*.gallery {
   margin-top: 20px;
   display: flex;
   flex-wrap: wrap;
@@ -84,4 +84,4 @@ body {
 
 .gallery-item .thumbnail {
   border: 5px solid #fff;
-}
+}*/
