--- a/style.css
+++ b/style.css
@@ -71,7 +71,28 @@ body {
   margin-right: 5px;
 }
 
-.gallery {
+div.img {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+}
+
+div.img:hover {
+    border: 1px solid #777;
+}
+
+div.img img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+
+/*.gallery {
   margin-top: 20px;
   display: flex;
   flex-wrap: wrap;
